[project]
name = "motioncontrol"
version = "0.1.0"
description = ""
authors = [
    {name = "tturner",email = "tturner@bastiansolutions.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
